# sine-wave

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/display/: Display.cpp
src/: main.cpp
